--- a/index.html
+++ b/index.html
@@ -19,8 +19,76 @@
         <a href="#work">Work</a>
         <a href="#expertise">Expertise</a>
         <a href="#contact">Contact</a>
+
+        <div class="container head">
+          <h1>We make your dreams come true.</h1>
+          <p class="copy">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+        </div>
       </nav>
     </header>  
+
+    <main>
+      <section class="services container" id="services">
+        <h2 class="subtitle">Our services</h2>
+        <div class="container-service">
+          <img src="img/checklist.svg" alt="Our services" />
+          <div class="checklist-service">
+            <div class="service">
+              <h3 class="n-service"><span class="number">1</span> Creative design</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quisquam tempora omnis, obcaecati consequuntur molestias ipsa autem molestiae et error.</p>
+            </div>
+
+            <div class="service">
+              <h3 class="n-service"><span class="number">2</span> Spot on techniques</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quisquam tempora omnis, obcaecati consequuntur molestias ipsa autem molestiae et error.</p>
+            </div>
+
+            <div class="service">
+              <h3 class="n-service"><span class="number">3</span> Troubleshooting</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quisquam tempora omnis, obcaecati consequuntur molestias ipsa autem molestiae et error.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="work" id="work">
+        <div class="container">
+          <h2 class="subtitle">Work</h2>
+          <div class="container-work">
+            <img src="img/1.jpg" alt="Work image" class="img-work">
+            <img src="img/2.jpg" alt="Work image" class="img-work">
+            <img src="img/3.jpg" alt="Work image" class="img-work">
+            <img src="img/4.jpg" alt="Work image" class="img-work">
+            <img src="img/5.jpg" alt="Work image" class="img-work">
+            <img src="img/6.jpg" alt="Work image" class="img-work">
+          </div>
+        </div>
+      </section>
+
+      <!-- <section class="image-light">
+        <img src="/img/close.svg" alt="Close menu" class="close">
+        <img src="" alt="" class="add-image">
+      </section> -->
+
+      <section class="container" id="expertise">
+        <h2 class="subtitle">Expertise on:</h2>
+        <section class="experts">
+          <div class="cont-expert">
+            <img src="/img/mind_map_isometric.svg" alt="Mind map">
+            <h3 class="n-expert">Analytics</h3>
+          </div>
+          <div class="cont-expert">
+            <img src="/img/pipeline_isometric.svg" alt="Mind map">
+            <h3 class="n-expert">SEO</h3>
+          </div>
+          <div class="cont-expert">
+            <img src="/img/target_isometric.svg" alt="Mind map">
+            <h3 class="n-expert">Analytics</h3>
+          </div>
+        </section>
+      </section>
+
+    </main>
 
   <i class='bx bxl-facebook'></i>
   <i class='bx bxl-twitter'></i>
