Finish HTML structure

--- a/index.html
+++ b/index.html
@@ -87,11 +87,26 @@
           </div>
         </section>
       </section>
-
     </main>
 
-  <i class='bx bxl-facebook'></i>
-  <i class='bx bxl-twitter'></i>
-  <i class='bx bxl-instagram'></i>
+    <footer class="footer" id="contact">
+      <div class="contact-us">
+        <h2 class="brand">BrandName Design Studio.</h2>
+        <p>Experts creating your dreams.</p>
+      </div>
+      <div class="social-media">
+        <a href="./" class="social-media-icon">
+          <i class='bx bxl-facebook'></i>
+        </a>
+        <a href="./" class="social-media-icon">
+          <i class='bx bxl-twitter'></i>
+        </a>
+        <a href="./" class="social-media-icon">
+          <i class='bx bxl-instagram'></i>
+        </a>
+      </div>
+    </footer>
+
+    
 </body>
 </html>
