Create js files and link them

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       </div>
     </footer>
 
-    
+    <script src="/js/menu.js"></script>
+    <script src="/js/lightbox.js"></script>
 </body>
 </html>
