Finish CSS and start breakpoints

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <a href="#work">Work</a>
         <a href="#expertise">Expertise</a>
         <a href="#contact">Contact</a>
+      </nav>
 
         <div class="container head">
-          <h1>We make your dreams come true.</h1>
+          <h1 class="title">We make your dreams come true.</h1>
           <p class="copy">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
         </div>
-      </nav>
     </header>  
 
     <main>
@@ -55,31 +55,31 @@
         <div class="container">
           <h2 class="subtitle">Work</h2>
           <div class="container-work">
-            <img src="img/1.jpg" alt="Work image" class="img-work">
-            <img src="img/2.jpg" alt="Work image" class="img-work">
-            <img src="img/3.jpg" alt="Work image" class="img-work">
-            <img src="img/4.jpg" alt="Work image" class="img-work">
-            <img src="img/5.jpg" alt="Work image" class="img-work">
-            <img src="img/6.jpg" alt="Work image" class="img-work">
+            <img src="img/1.jpg" alt="Work image" class="work-img">
+            <img src="img/2.jpg" alt="Work image" class="work-img">
+            <img src="img/3.jpg" alt="Work image" class="work-img">
+            <img src="img/4.jpg" alt="Work image" class="work-img">
+            <img src="img/5.jpg" alt="Work image" class="work-img">
+            <img src="img/6.jpg" alt="Work image" class="work-img">
           </div>
         </div>
       </section>
 
-      <!-- <section class="image-light">
+      <section class="image-light">
         <img src="/img/close.svg" alt="Close menu" class="close">
-        <img src="" alt="" class="add-image">
-      </section> -->
+        <img src="/img/front.jpg" alt="lightbox" class="add-image">
+      </section>
 
       <section class="container" id="expertise">
         <h2 class="subtitle">Expertise on:</h2>
         <section class="experts">
           <div class="cont-expert">
             <img src="/img/mind_map_isometric.svg" alt="Mind map">
-            <h3 class="n-expert">Analytics</h3>
+            <h3 class="n-expert">Mind maps</h3>
           </div>
           <div class="cont-expert">
             <img src="/img/pipeline_isometric.svg" alt="Mind map">
-            <h3 class="n-expert">SEO</h3>
+            <h3 class="n-expert">Detangling ideas</h3>
           </div>
           <div class="cont-expert">
             <img src="/img/target_isometric.svg" alt="Mind map">
@@ -90,21 +90,24 @@
     </main>
 
     <footer class="footer" id="contact">
-      <div class="contact-us">
-        <h2 class="brand">BrandName Design Studio.</h2>
-        <p>Experts creating your dreams.</p>
+      <div class="container footer-content">
+        <div class="contact-us">
+          <h2 class="brand">BrandName Design Studio.</h2>
+          <p>Experts creating your dreams.</p>
+        </div>
+        <div class="social-media">
+          <a href="./" class="social-media-icon">
+            <i class='bx bxl-facebook'></i>
+          </a>
+          <a href="./" class="social-media-icon">
+            <i class='bx bxl-twitter'></i>
+          </a>
+          <a href="./" class="social-media-icon">
+            <i class='bx bxl-instagram'></i>
+          </a>
+        </div>
       </div>
-      <div class="social-media">
-        <a href="./" class="social-media-icon">
-          <i class='bx bxl-facebook'></i>
-        </a>
-        <a href="./" class="social-media-icon">
-          <i class='bx bxl-twitter'></i>
-        </a>
-        <a href="./" class="social-media-icon">
-          <i class='bx bxl-instagram'></i>
-        </a>
-      </div>
+      <div class="line"></div>
     </footer>
 
     <script src="/js/menu.js"></script>
