--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
       <div class="line"></div>
     </footer>
 
-    <script src="/js/menu.js"></script>
-    <script src="/js/lightbox.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
