Add modal to images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <section class="image-light">
         <img src="/img/close.svg" alt="Close menu" class="close">
-        <img src="/img/front.jpg" alt="lightbox" class="add-image">
+        <img src="" alt="lightbox" class="add-image">
       </section>
 
       <section class="container" id="expertise">
